--- a/presence.html
+++ b/presence.html
@@ -20,8 +20,7 @@ div.caption {
   position: relative;
   width: 100%;
   box-sizing: border-box;
-  padding: 0.1em 1em 0.1em 0.1em;
-
+  padding: 0.1em;
   background-color: dimgray;
   font-size: 3.5em;
   font-weight: bold;
@@ -30,7 +29,6 @@ div.caption {
 div.column {
   position: absolute;
   background-color: lightgray;
-  /*padding: 0.2em;*/
   box-sizing: border-box;
 }
 div.column > div {
@@ -39,6 +37,7 @@ div.column > div {
   border-bottom-width: 1px;
   background-color: lightgray;
 }
+/*
 div.c1 {
   left: 0;
   width: 4.5em;
@@ -68,6 +67,7 @@ div.c5 {
   right: 0;
   width: 4.51em;
 }
+*/
 div.x1 {
   position: relative;
   width: 100%;
