--- a/_work/presence/TreeMd/TreeMd/data/template.html
+++ b/_work/presence/TreeMd/TreeMd/data/template.html
@@ -8,7 +8,12 @@ html, body, * {
   border: 0 none;
   margin: 0;
   padding: 0;
-} 
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 8pt;
+}
+body {
+  padding: 0.5em;
+}
 div.presentation {
   position: absolute;
   width: 100%;
@@ -32,6 +37,11 @@ div.presentation > div.presentation_text {
   font-size: 1.5em;
   background-color: orange;
 }
+
+ol, ul {
+  padding-left: 1.5em;
+}
+
   </style>
 </head>
 <body>
