--- a/training/sommer.html
+++ b/training/sommer.html
@@ -36,11 +36,14 @@ div.h2 {
 </div>
 
 <div id="content_container">
-<div class="h1">Trainingsplan (pro Woche, für 3 Wochen)</div>
-<p>4x Heimtraining (selbständig, Start Mo, 13.Juli)<br>
-2x Beachen Do 19:00, So 10:15 (Start So, 12. Juli)<br>
-pro ausgelassenem Beachen: 2x Heimtraining zusätzlich</p>
-<p><b>Wer krank ist, muss Pause machen!</b></p>
+<div class="h1">Trainingsplan (pro Woche)</div>
+<p>4x Training<br>
+Di: 18:30-20:30, bei Sabsi, St. Sebastian<br>
+Do: 18:30-20:30, Beachen, Terrassenbad<br>
+Fr: 18:30-20:30, bei Sabsi, St. Sebastian<br>
+So: 9:30-11:30, Beachen, Terrassenbad<br><br>
+pro ausgelassenem Training: Heimtraining<br>&nbsp;</p>
+<p><b>Wer krank ist, muss Pause machen!</b><br>&nbsp;</p>
 
 <div class="h1">Heimtraining</div>
 
