--- a/u12/index.html
+++ b/u12/index.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/elements/expander/styles.css">
+<style>
+a h3::after {
+  opacity: 0;
+}
+</style>
   <link rel="shortcut icon" href="/favicons/favicon.ico">
+  <script src="/elements/expander/script.js"></script>
   <script src="/script/code.js"></script>
   <script>
 function init() {
@@ -16,6 +23,9 @@ function init() {
       loader.style.display = 'none';
       cont.style.display = 'block';
     }
+
+    window.bhv.elements.expander.initOV(); // (expanders, keepOpen);
+
   } else {
     cont.parentNode.removeChild(cont);
   }
@@ -31,8 +41,9 @@ function init() {
 </div>
 </div>
   <div id="loader">Loading...</div>
-  <div id="content_container" class="locked"><h1 class="tactics">Annahme</h1>
-<div style="overflow-x: auto;">
+  <div id="content_container" class="locked"><h1 id="h_1" class="tactics expandable">Annahme</h1>
+<div id="h_1_2" class="expanded_container">
+  <div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="2er_riegel" href="/imageview.html?i=u12%2F2er_riegel.png&t=2er%20Riegel&x=Die%20Annahme%20des%20gegnerischen%20Service.&b=%2Fu12%232er_riegel"><h3>2er Riegel</h3></a></td>
@@ -49,8 +60,10 @@ function init() {
 </table>
 </div>
 
-<h1 class="tactics">Aufspiel + Angriffsvorbereitung</h1>
-<div style="overflow-x: auto;">
+</div>
+<h1 id="h_2" class="tactics expandable">Aufspiel + Angriffsvorbereitung</h1>
+<div id="h_2_2" class="expanded_container">
+  <div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="aufspiel" href="/imageview.html?i=u12%2Faufspiel.png&t=Aufspiel&x=Das%20Aufspiel%20und%20die%20Vorbereitung%20auf%20den%20eigenen%20Angriff.&b=%2Fu12%23aufspiel"><h3>Aufspiel</h3></a></td>
@@ -67,8 +80,10 @@ function init() {
 </table>
 </div>
 
-<h1 class="tactics">Angriff + Sicherung</h1>
-<div style="overflow-x: auto;">
+</div>
+<h1 id="h_3" class="tactics expandable">Angriff + Sicherung</h1>
+<div id="h_3_2" class="expanded_container">
+  <div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="angriff4" href="/imageview.html?i=u12%2Fangriff4.png&t=Links%3A%20Position%204&x=Der%20Angriff%20%C3%BCber%20die%20Position%204%20mit%20Sicherung.&b=%2Fu12%23angriff4"><h3>Links: Position 4</h3></a></td>
@@ -88,8 +103,10 @@ function init() {
 </table>
 </div>
 
-<h1 class="tactics">Basis</h1>
-<div style="overflow-x: auto;">
+</div>
+<h1 id="h_4" class="tactics expandable">Basis</h1>
+<div id="h_4_2" class="expanded_container">
+  <div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="basis" href="/imageview.html?i=u12%2Fbasis.png&t=Basis&x=Wir%20gehen%20in%20die%20Basis%2C%20sobald%20der%20Ball%20beim%20Gegner%20ist.&b=%2Fu12%23basis"><h3>Basis</h3></a></td>
@@ -106,8 +123,10 @@ function init() {
 </table>
 </div>
 
-<h1 class="tactics">Verteidigung (mit Block)</h1>
-<div style="overflow-x: auto;">
+</div>
+<h1 id="h_5" class="tactics expandable">Verteidigung (mit Block)</h1>
+<div id="h_5_2" class="expanded_container">
+  <div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="block4" href="/imageview.html?i=u12%2Fblock4.png&t=Links%3A%20Position%204&x=Der%20Block%20auf%20der%20Position%204%20gegen%20einen%20gegnerischen%20Angriff.&b=%2Fu12%23block4"><h3>Links: Position 4</h3></a></td>
@@ -130,8 +149,10 @@ function init() {
 </table>
 </div>
 
-<h1 class="tactics">Verteidigung (ohne Block)</h1>
-<div style="overflow-x: auto;">
+</div>
+<h1 id="h_6" class="tactics expandable">Verteidigung (ohne Block)</h1>
+<div id="h_6_2" class="expanded_container">
+  <div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="ohne4" href="/imageview.html?i=u12%2Fohne4.png&t=Links%3A%20Position%204&x=Geschenkter%20Ball%20bei%20Position%204.&b=%2Fu12%23ohne4"><h3>Links: Position 4</h3></a></td>
@@ -154,6 +175,7 @@ function init() {
 </table>
 </div>
 
+</div>
 </div>
   <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div>
 </div>
