--- a/ov.html
+++ b/ov.html
@@ -146,7 +146,7 @@ function init() {
     'u12_21', 'u13_21', 'u14_21', 'u15_21', 'u16_21', 'u18_21', 'u20_21',
     'ak',
     'br3_21', 'br2_21', 'br1_21',
-    'training',
+    //'training',
     'archive',
     'a19',
      'u10_19', 'u11_19', 'u12_19', 'u13_19', 'u15_19', 'u17_19',
@@ -171,9 +171,9 @@ function init() {
 
     // 'ak': ...
     // 'spielfeld6',
-    'br3_21': ['training_b', 'training_jungs', 'tagebuch_b', 'system6'],
+    'br3_21': ['training_b', 'training_jungs', 'tagebuch_b', 'system6', 'zeiten_b'],
     'br2_21': [],
-    'br1_21': ['sommertraining', 'herzhirn_21', 'training_a', 'tagebuch_a', 'system1'],
+    'br1_21': ['herzhirn_21', 'training_a', 'tagebuch_a', 'system1', 'zeiten_a', 'heimtraining'],
 
     // 'archive': ...
     // 'a19': ...
@@ -386,6 +386,7 @@ function removeClass(elem, clazz) {
         <a id="tagebuch_b" href="diary.html?key=b" class="locked_3"><h3>Trainingstagebuch</h3></a>
         <!--a id="spielfeld6" href="/system6/spielfeld/" class="locked_3"><h3>Spielsystem 4</h3></a-->
         <a id="system6" href="/system6/" class="locked_3"><h3>Spielsystem</h3></a>
+        <a id="zeiten_b" href="/training/zeiten_b.html"><h3>Trainingszeiten</h3></a>
       </div>
 
       <h2 id="br2_21" class="expandable locked_2">Brückl 2 - Landesliga</h2>
@@ -395,11 +396,12 @@ function removeClass(elem, clazz) {
 
       <h2 id="br1_21" class="expandable locked_1">Brückl 1 - Bundesliga</h2>
       <div id="br1_21_2" class="expanded_container">
-        <a id="sommertraining" href="/training/sommer.html"><h3>Sommertraining</h3></a>
         <a id="herzhirn_21" href="/teambuilding/herzhirn_21/" class="locked_1"><h3>Herz + Hirn</h3></a>
         <a id="training_a" href="presence.html?key=a" class="locked_1"><h3>Anwesenheit</h3></a>
         <a id="tagebuch_a" href="diary.html?key=a" class="locked_1"><h3>Trainingstagebuch</h3></a>
         <a id="system1" href="/system1/" class="locked_1"><h3>Spielsystem</h3></a>
+        <a id="zeiten_a" href="/training/zeiten_a.html"><h3>Trainingszeiten</h3></a>
+        <a id="heimtraining" href="/training/heimtraining.html"><h3>Heimtraining</h3></a>
       </div>
     </div>
 
