--- a/presence.html
+++ b/presence.html
@@ -215,6 +215,11 @@ div.data > div:last-child > div {
 div#training div.column div.x1:last-child {
   background-color: darkgray;
 }
+span.smaller {
+  background: inherit;
+  font-size: 0.5em;
+  font-weight: inherit;
+}
 /* -- training info -------------------------------------------------------- */
 div#training_info {
   position: absolute;
