--- a/ov.html
+++ b/ov.html
@@ -173,7 +173,9 @@ function init() {
     // 'spielfeld6',
     'br3_21': ['training_b', 'training_jungs', 'tagebuch_b', 'system6', 'zeiten_b'],
     'br2_21': [],
-    'br1_21': ['herzhirn_21', 'training_a', 'tagebuch_a', 'system1', 'zeiten_a', 'heimtraining'],
+    'br1_21': ['herzhirn_21', 'training_a', 'tagebuch_a', 'system1',
+               'schedule_br1g_21', 'results_br1g_21', 'standings_br1g_21', 'players_br1g_21',
+               'zeiten_a', 'heimtraining'],
 
     // 'archive': ...
     // 'a19': ...
@@ -400,6 +402,12 @@ function removeClass(elem, clazz) {
         <a id="training_a" href="presence.html?key=a" class="locked_1"><h3>Anwesenheit</h3></a>
         <a id="tagebuch_a" href="diary.html?key=a" class="locked_1"><h3>Trainingstagebuch</h3></a>
         <a id="system1" href="/system1/" class="locked_1"><h3>Spielsystem</h3></a>
+
+        <a id="schedule_br1g_21" href="schedule.html?key=br1g_21"><h3>Spieltermine</h3></a>
+        <a id="results_br1g_21" href="results.html?key=br1g_21"><h3>Ergebnisse</h3></a>
+        <a id="standings_br1g_21" href="standings.html?key=br1g_21"><h3>Tabelle</h3></a>
+        <a id="players_br1g_21" href="players.html?key=br1g_21"><h3>Spielerinnen</h3></a>
+
         <a id="zeiten_a" href="/training/zeiten_a.html"><h3>Trainingszeiten</h3></a>
         <a id="heimtraining" href="/training/heimtraining.html"><h3>Heimtraining</h3></a>
       </div>
@@ -474,7 +482,6 @@ function removeClass(elem, clazz) {
         </div>
         <h2 id="br1_20" class="expandable">Brückl 1 - Bundesliga</h2>
         <div id="br1_20_2" class="expanded_container">
-          <!--a id="schedule_br1g_20" href="schedule.html?key=br1g_20"><h3>Spieltermine</h3></a-->
           <a id="results_br1g_20" href="results.html?key=br1g_20"><h3>Ergebnisse</h3></a>
           <a id="standings_br1g_20" href="standings.html?key=br1g_20"><h3>Tabelle</h3></a>
           <a id="players_br1g_20" href="players.html?key=br1g_20"><h3>Spielerinnen</h3></a>
