--- a/presence.html
+++ b/presence.html
@@ -83,16 +83,26 @@ div.x1.ul {
 div.x2 {
   position: relative;
   width: 100%;
-  height: 2.4em;
-  font-size: 2.5em;
+  height: 2em;
+  font-size: 3em;
   white-space: nowrap;
-  padding: 0.5em 0.1em 0 0;
+  padding: 0.4em 0.1em 0 0;
   font-weight: bold;
 }
 /* bestätigt */
 div.column div.x2 {
   border-bottom-width: 2px;
 }
+div.x2.x2b {
+  padding-top: 0.2em;
+}
+div.x2.x2b > div {
+  background-color: transparent;
+  text-align: right;
+  font-size: 0.6em;
+  font-weight: bold;
+}
+
 div.c4 {
   left: 13.5em;
   right: 4.5em;
