--- a/_work/statistics/statistics.html
+++ b/_work/statistics/statistics.html
@@ -58,16 +58,16 @@ table.match td.sumQ {
   padding: 0 0.4em;
 }
 table.match tr.plus td {
-  background-color: lime;
   background-color: yellowgreen;
 }
 table.match tr.medium td {
-  background-color: yellow;
   background-color: palegoldenrod;
 }
 table.match tr.minus td {
-  background-color: red;
   background-color: lightcoral;
+}
+table.match tr.none td {
+  background-color: #E0E0E0;
 }
 table.match tr.footer td {
   background-color: lightgray;
