--- a/ov.html
+++ b/ov.html
@@ -181,7 +181,7 @@ function init() {
     'br3_21': ['training_b', 'training_jungs', 'tagebuch_b', 'system6', 'zeiten_b'],
     'br2_21': [],
     'br1_21': ['herzhirn_21', 'training_a', 'tagebuch_a', 'system1',
-               'schedule_br1g_21', 'results_br1g_21', 'standings_br1g_21', 'players_br1g_21',
+               'schedule_br1g_21', 'results_br1g_21', 'statistics_br1g_21', 'standings_br1g_21', 'players_br1g_21',
                'zeiten_a', 'heimtraining'],
 
     // 'archive': ...
@@ -419,6 +419,7 @@ function removeClass(elem, clazz) {
 
         <a id="schedule_br1g_21" href="schedule.html?key=br1g_21"><h3>Spieltermine</h3></a>
         <a id="results_br1g_21" href="results.html?key=br1g_21"><h3>Ergebnisse</h3></a>
+        <a id="statistics_br1g_21" href="/statistics/21/bhv1_gd.html"><h3>Statistik</h3></a>
         <a id="standings_br1g_21" href="standings.html?key=br1g_21"><h3>Tabelle</h3></a>
         <a id="players_br1g_21" href="players.html?key=br1g_21"><h3>Spielerinnen</h3></a>
 
