presence, stats, dates

--- a/ov.html
+++ b/ov.html
@@ -411,7 +411,7 @@ function removeClass(elem, clazz) {
 
         <a id="schedule_br3g_21" href="schedule.html?key=br3g_21"><h3>Spieltermine</h3></a>
         <a id="results_br3g_21" href="results.html?key=br3g_21"><h3>Ergebnisse</h3></a>
-        <!--a id="statistics_br3g_21" href="/statistics/21/bhv3_gd.html"><h3>Statistik</h3></a-->
+        <a id="statistics_br3g_21" href="/statistics/21/bhv3_gd.html" class="locked_3"><h3>Statistik</h3></a>
         <a id="standings_br3g_21" href="standings.html?key=br3g_21"><h3>Tabelle</h3></a>
         <a id="players_br3g_21" href="players.html?key=br3g_21"><h3>Spielerinnen</h3></a>
 
